k8s/upload-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-api
  labels:
    app: upload-api
spec:
  selector:
    matchLabels:
      app: upload-api
  template:
    metadata:
      labels:
        app: upload-api
    spec:
      containers:
        - name: upload-api
          image: trycatchf1nally/archive-cloud-upload-api:1.0.0
          volumeMounts:
            - mountPath: /usr/src/app/uploads
              name: uploads-data
            - mountPath: /usr/src/app/archives
              name: archives-data
      volumes:
        - name: uploads-data
          persistentVolumeClaim:
            claimName: uploads-volume-claim
        - name: archives-data
          persistentVolumeClaim:
            claimName: archives-volume-claim
