k8s/upload-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: upload-api
