k8s/upload-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upload-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
spec:
  rules:
    - http:
        paths:
          - path: /api/upload(/|$)(.*)
            pathType: "Prefix"
            backend:
              service:
                name: upload-api
                port:
                  number: 80
